<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd300"
    android:orientation="vertical"
    tools:context=".controller.GameActivity">

    <TextView
        android:id="@+id/gameQuestionText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:background="@drawable/background"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="#be000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gameAnswer1btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <Button
        android:id="@+id/gameAnswer1btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="#BE000000"
        android:text="@string/answer1"
        android:textColor="#FFD300"
        android:textSize="20sp"
        app:backgroundTint="#be000000"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/gameAnswer2btn"
        tools:layout_editor_absoluteX="9dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/gameAnswer2btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="#FFD300"
        android:text="@string/answer2"
        android:textColor="#FFD300"
        android:textSize="20sp"
        app:backgroundTint="#AB000000"
        app:layout_constraintBottom_toTopOf="@+id/gameAnswer3btn"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/gameAnswer3btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="#FFD300"
        android:text="@string/answer3"
        android:textColor="#FFD300"
        android:textSize="20sp"
        app:backgroundTint="#BE000000"
        app:layout_constraintBottom_toTopOf="@+id/gameAnswer4btn"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/gameAnswer4btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="#FFD300"
        android:text="@string/answer4"
        android:textColor="#FFD300"
        android:textSize="20sp"
        app:backgroundTint="#BE000000"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>